Reader: Fix Recommended Posts broken in IE

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -71,12 +71,12 @@
 	}
 }
 
+// Post recommendations in Search
 // Custom breakpoints needed to match Related Posts
 $reader-post-card-breakpoint: "( min-width: 1012px )";
 $reader-related-card-v2-breakpoint-medium: "( min-width: 661px ) and ( max-width: 730px )";
 $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
-// Post recommendations in Search
 .is-reader-page .search-stream .reader__content {
 	display: flex;
 	flex-flow: wrap;
@@ -199,25 +199,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 }
 
-.is-reader-page .search-stream__input-card.card {
-	box-shadow: 0 0 0 2px lighten( $gray, 20% ), 0 1px 2px lighten( $gray, 30% );
-	margin-bottom: 0px;
- }
-
- .is-reader-page .search-stream__blank-suggestions {
-	 margin-bottom: -15px;
- }
-
-.card.reader-search-card {
-
-	&.is-photo {
-
-		@include breakpoint( "<660px" ) {
-			z-index: z-index( 'root', '.reader-search-card' );
-		}
-	}
-}
-
+// Date and Relevance sorter
 .search-stream__sort-picker {
 	position: absolute;
 	right: 50px;
@@ -225,11 +207,32 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	z-index: z-index( 'root', '.search-stream__sort-picker' );
 }
 
-// Post and Site results
-.search-stream .search-stream__results {
+// Posts and Sites results
+.search-stream .search-stream__results.is-two-columns {
 	display: flex;
 }
 
+.search-stream .search-stream__recommendation-list-item:nth-child(2),
+.search-stream .search-stream__recommendation-list-item:nth-child(3) {
+	margin-top: 100px;
+
+	@include breakpoint( "<660px" ) {
+		margin-top: 80px;
+	}
+}
+
+.search-stream .search-stream__recommendation-list-item:nth-child(3) {
+
+	@media #{$reader-related-card-v2-breakpoint-medium} {
+		margin-top: 0;
+	}
+
+	@include breakpoint( "<480px" ) {
+		margin-top: 0;
+	}
+}
+
+// Post and Sites static headers
 .search-stream__headers {
 	color: $gray;
 	display: flex;
@@ -269,7 +272,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 }
 
-// Search stream Posts and Sites header
+// Posts and Sites segmented control
 .search-stream__header .section-nav {
 	background: inherit;
 	border-bottom: 2px solid lighten( $gray, 30% );
@@ -337,22 +340,6 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	margin-left: 40px;
 	max-width: 265px;
 	width: 100%;
-}
-// TODO: remove this after site on search lands
-.following.search-stream.main .reader__content {
-	padding-top: 105px;
-}
-
-.search-stream__with-sites .search-stream__results {
-	padding-top: 83px;
-
-	&.is-two-columns {
-		padding-top: 135px;
-	}
-}
-
-.search-stream__single-column-results  {
-	padding-top: 120px;
 }
 
 .search-stream__post-header,
